--- a/deploy/vos.yaml
+++ b/deploy/vos.yaml
@@ -152,6 +152,8 @@ vos:
     auth: "{{ fedcloud_sa }}"
   vo.obsea.es:
     auth: "{{ fedcloud_sa }}"
+  vo.openrdm.eu:
+    auth: "{{ fedcloud_sa }}"
   vo.operas-eu.org:
     auth: "{{ fedcloud_sa }}"
   vo.pangeo.eu:
