Update DESY-CC.yaml (#172)
* Update DESY-CC.yaml

add projects for CITE and openRDM

* Update vo-mappings.yaml

add vo.openrdm.eu and vo.cite.gr

* Add service account for vo.cite.gr

* Add vo.openrdm.eu

Co-authored-by: Enol Fernandez <enol.fernandez@egi.eu>

--- a/deploy/vos.yaml
+++ b/deploy/vos.yaml
@@ -105,6 +105,8 @@ vos:
     auth: "{{ fedcloud_sa }}"
   vo.carouseldancing.org:
     auth: "{{ fedcloud_sa }}"
+  vo.cite.gr:
+    auth: "{{ fedcloud_sa }}"
   vo.clarin.eu:
   vo.crmdr.org:
   vo.dariah.eu:
@@ -149,6 +151,8 @@ vos:
   vo.notebooks.egi.eu:
     auth: "{{ fedcloud_sa }}"
   vo.obsea.es:
+    auth: "{{ fedcloud_sa }}"
+  vo.openrdm.eu:
     auth: "{{ fedcloud_sa }}"
   vo.operas-eu.org:
     auth: "{{ fedcloud_sa }}"
