Fix linting issues

--- a/caso/Dockerfile
+++ b/caso/Dockerfile
@@ -1,8 +1,9 @@
-FROM python:3.8
-MAINTAINER Enol Fernandez <enol.fernandez@egi.eu>
+FROM python:3
+
+SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
 RUN apt-get update \
-    && apt-get -qy install --fix-missing curl \
+    && apt-get -qy install --fix-missing --no-install-recommdns curl \
     && curl -L http://repository.egi.eu/sw/production/cas/1/current/repo-files/egi-trustanchors.list > /etc/apt/sources.list.d/egi-trustanchors.list \
     && curl https://dl.igtf.net/distribution/igtf/current/GPG-KEY-EUGridPMA-RPM-3 | apt-key add - \
     && apt-get update \
@@ -16,8 +17,9 @@ RUN apt-get update \
 
 RUN fetch-crl -p 2 -T 30 || exit 0
 
-RUN cd /usr/local/share/ca-certificates \
-    && for f in /etc/grid-security/certificates/*.pem ; do ln -s $f $(basename $f .pem).crt; done \
+RUN for f in /etc/grid-security/certificates/*.pem ; do \
+	ln -s "$f" /usr/local/share/ca-certificates/"$(basename $f .pem).crt"; \
+    done \
     && update-ca-certificates
 
 
@@ -25,10 +27,11 @@ RUN cd /usr/local/share/ca-certificates \
 # Using version 3.0.0
 ARG CASO_VERSION=3.0.0
 
-RUN pip install git+https://github.com/IFCA/caso.git@$CASO_VERSION
+RUN pip install --no-cache-dir git+https://github.com/IFCA/caso.git@$CASO_VERSION
 
-RUN mkdir -p /var/spool/caso
 COPY caso.conf /etc/caso/caso.conf
 COPY voms.json /etc/caso/voms.json
+
+RUN mkdir -p /var/spool/caso
 
 CMD ["/usr/local/bin/caso-extract"]
