--- a/caso/Dockerfile
+++ b/caso/Dockerfile
@@ -3,7 +3,7 @@ FROM python:3
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
 RUN apt-get update \
-    && apt-get -qy install --fix-missing --no-install-recommdns curl \
+    && apt-get -qy install --fix-missing --no-install-recommends curl \
     && curl -L http://repository.egi.eu/sw/production/cas/1/current/repo-files/egi-trustanchors.list > /etc/apt/sources.list.d/egi-trustanchors.list \
     && curl https://dl.igtf.net/distribution/igtf/current/GPG-KEY-EUGridPMA-RPM-3 | apt-key add - \
     && apt-get update \
