--- a/caso/Dockerfile
+++ b/caso/Dockerfile
@@ -2,6 +2,8 @@ FROM python:3
 
 SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
+# We do need install recommends for the CAs
+# hadolint ignore=DL3015, DL3008
 RUN apt-get update \
     && apt-get -qy install --fix-missing --no-install-recommends curl \
     && curl -L http://repository.egi.eu/sw/production/cas/1/current/repo-files/egi-trustanchors.list > /etc/apt/sources.list.d/egi-trustanchors.list \
@@ -18,7 +20,7 @@ RUN apt-get update \
 RUN fetch-crl -p 2 -T 30 || exit 0
 
 RUN for f in /etc/grid-security/certificates/*.pem ; do \
-	ln -s "$f" /usr/local/share/ca-certificates/"$(basename $f .pem).crt"; \
+	ln -s "$f" "/usr/local/share/ca-certificates/$(basename "$f" .pem).crt"; \
     done \
     && update-ca-certificates
 
