Add cloudkeeper images

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -16,7 +16,9 @@ jobs:
       matrix:
         image:
         - cloud-info
-        - caso 
+        - caso
+        - cloudkeeper-os
+        - cloudkeeper-core
 
     steps:
       - name: Checkout
