--- a/cloudkeeper-os/Dockerfile
+++ b/cloudkeeper-os/Dockerfile
@@ -1,9 +1,9 @@
 FROM centos:7
 
-RUN yum install -y centos-release-openstack-stein vim
-# moved to different location as repos are not fully functional
-RUN curl http://appdb.egi.eu:9009/api/repofiles/index.php?id=1141 > /etc/yum.repos.d/cloudkeeper.repo
-RUN yum install -y cloudkeeper-os
+RUN curl http://appdb.egi.eu:9009/api/repofiles/index.php?id=1141 > /etc/yum.repos.d/cloudkeeper.repo \
+    && yum install -y centos-release-openstack-stein vim \
+    && yum install -y cloudkeeper-os \
+    && yum clean all
 
 RUN mkdir -p /etc/cloudkeeper-os/ \
              /var/spool/cloudkeeper/images
