--- a/sites/BIFI.yaml
+++ b/sites/BIFI.yaml
@@ -4,22 +4,22 @@ endpoint: https://colossus.cesar.unizar.es:5000/v3
 vos:
 - name: covid19.eosc-synergy.eu
   auth:
-    project_id: 36b6d10a0c194fa8991e7e8d15297478
+    project_id: f07679a8d4ac40379b51db4236bc3c27
 - name: eosc-synergy.eu
   auth:
-    project_id: fdfa9b81582447729f16de6cf61b16e4
-- name: gosafe.eng.it
-  auth:
-    project_id: 34671c4356fd4c66835f30650c20612e
+    project_id: 0c1de26753ed4311a6cefff9094ad3e3
 - name: lagoproject.net
   auth:
-    project_id: bb8a629f3e644b69befbf17130c1dee3
+    project_id: 21a85c6ead0346b08e22709d0422799d
 - name: o3as.data.kit.edu
   auth:
     project_id: 621b1977bb384beab1519713c7e695f0
 - name: ops
   auth:
-    project_id: 487298e2e77b4896a5059b747373ea6d
+    project_id: 6930771153aa4b8d8637222dec8fd949
 - name: worsica.vo.incd.pt
   auth:
-    project_id: fce23a2c4eca447a9d5b9c2bdab55e26
+    project_id: 46f55a92f3904d509d75525930d8d0eb
+- name: vo.phiri.eu
+  auth:
+    project_id: 1d64c6e5237b46af8acb44f79b7b5a15
