--- a/vo-mappings.yaml
+++ b/vo-mappings.yaml
@@ -1,83 +1,84 @@
 vos:
-  acc-comp.egi.eu: "urn:mace:egi.eu:group:acc-comp.egi.eu:vm_operator:role=member#aai.egi.eu"
-  aquamonitor.c-scale.eu: "urn:mace:egi.eu:group:aquamonitor.c-scale.eu:role=member#aai.egi.eu "
-  belle: "urn:mace:egi.eu:group:belle:vm_operator:role=member#aai.egi.eu"
-  benchmark.terradue.com: "urn:mace:egi.eu:group:benchmark.terradue.com:vm_operator:role=member#aai.egi.eu"
-  biinsight.eosc-hub.eu: "urn:mace:egi.eu:group:biinsight.eosc-hub.eu:vm_operator:role=member#aai.egi.eu"
-  bioisi: "urn:mace:egi.eu:group:bioisi:vm_operator:role=member#aai.egi.eu"
-  biomed: "urn:mace:egi.eu:group:biomed:vm_operator:role=member#aai.egi.eu"
-  /biomed/vip: "urn:mace:egi.eu:group:biomed:vm_operator:role=member#aai.egi.eu"
-  blazarmonitoring.asi.it: "urn:mace:egi.eu:group:blazarmonitoring.asi.it:vm_operator:role=member#aai.egi.eu"
-  chipster.csc.fi: "urn:mace:egi.eu:group:chipster.csc.fi:vm_operator:role=member#aai.egi.eu"
-  cloud.egi.eu: "urn:mace:egi.eu:group:cloud.egi.eu:vm_operator:role=member#aai.egi.eu"
-  cms: "urn:mace:egi.eu:group:cms:vm_operator:role=member#aai.egi.eu"
-  covid19.eosc-synergy.eu: "urn:mace:egi.eu:group:covid19.eosc-synergy.eu:vm_operator:role=member#aai.egi.eu"
-  cos4cloud-eosc.eu: "urn:mace:egi.eu:group:cos4cloud-eosc.eu:vm_operator:role=member#aai.egi.eu"
-  cryoem.instruct-eric.eu: "urn:mace:egi.eu:group:cryoem.instruct-eric.eu:vm_operator:role=member#aai.egi.eu"
-  d4science.org: "urn:mace:egi.eu:group:d4science.org:vm_operator:role=member#aai.egi.eu"
-  datafurn.eosc-hub.eu: "urn:mace:egi.eu:group:datafurn.eosc-hub.eu:vm_operator:role=member#aai.egi.eu"
+  EOServices-vo.indra.es: "urn:mace:egi.eu:group:EOServices-vo.indra.es:role=vm_operator#aai.egi.eu"
+  aquamonitor.c-scale.eu: "urn:mace:egi.eu:group:aquamonitor.c-scale.eu:role=member#aai.egi.eu"
+  belle: "urn:mace:egi.eu:group:belle:role=vm_operator#aai.egi.eu"
+  benchmark.terradue.com: "urn:mace:egi.eu:group:benchmark.terradue.com:role=vm_operator#aai.egi.eu"
+  biinsight.eosc-hub.eu: "urn:mace:egi.eu:group:biinsight.eosc-hub.eu:role=vm_operator#aai.egi.eu"
+  bioisi: "urn:mace:egi.eu:group:bioisi:role=vm_operator#aai.egi.eu"
+  biomed: "urn:mace:egi.eu:group:biomed:role=vm_operator#aai.egi.eu"
+  /biomed/vip: "urn:mace:egi.eu:group:biomed:role=vm_operator#aai.egi.eu"
+  blazarmonitoring.asi.it: "urn:mace:egi.eu:group:blazarmonitoring.asi.it:role=vm_operator#aai.egi.eu"
+  chipster.csc.fi: "urn:mace:egi.eu:group:chipster.csc.fi:role=vm_operator#aai.egi.eu"
+  cloud.egi.eu: "urn:mace:egi.eu:group:cloud.egi.eu:role=vm_operator#aai.egi.eu"
+  cms: "urn:mace:egi.eu:group:cms:role=vm_operator#aai.egi.eu"
+  covid19.eosc-synergy.eu: "urn:mace:egi.eu:group:covid19.eosc-synergy.eu:role=vm_operator#aai.egi.eu"
+  cos4cloud-eosc.eu: "urn:mace:egi.eu:group:cos4cloud-eosc.eu:role=vm_operator#aai.egi.eu"
+  cryoem.instruct-eric.eu: "urn:mace:egi.eu:group:cryoem.instruct-eric.eu:role=vm_operator#aai.egi.eu"
+  d4science.org: "urn:mace:egi.eu:group:d4science.org:role=vm_operator#aai.egi.eu"
+  datafurn.eosc-hub.eu: "urn:mace:egi.eu:group:datafurn.eosc-hub.eu:role=vm_operator#aai.egi.eu"
   demo.fedcloud.egi.eu: "urn:mace:egi.eu:group:demo.fedcloud.egi.eu:vm_operator:role=member#aai.egi.eu"
-  drihm.eu: "urn:mace:egi.eu:group:drihm.eu:vm_operator:role=member#aai.egi.eu"
-  dteam: "urn:mace:egi.eu:group:dteam:vm_operator:role=member#aai.egi.eu"
-  ec-meloa.eu: "urn:mace:egi.eu:group:ec-meloa.eu:vm_operator:role=member#aai.egi.eu"
-  egi-services: "urn:mace:egi.eu:group:egi-services:vm_operator:role=member#aai.egi.eu"
-  eiscat.se: "urn:mace:egi.eu:group:eiscat.se:vm_operator:role=member#aai.egi.eu"
-  enmr.eu: "urn:mace:egi.eu:group:enmr.eu:vm_operator:role=member#aai.egi.eu"
-  eosc-synergy.eu: "urn:mace:egi.eu:group:eosc-synergy.eu:vm_operator:role=member#aai.egi.eu"
+  digifarm.io: "urn:mace:egi.eu:group:digifarm.io:role=vm_operator#aai.egi.eu"
+  drihm.eu: "urn:mace:egi.eu:group:drihm.eu:role=vm_operator#aai.egi.eu"
+  dteam: "urn:mace:egi.eu:group:dteam:role=vm_operator#aai.egi.eu"
+  eiscat.se: "urn:mace:egi.eu:group:eiscat.se:role=vm_operator#aai.egi.eu"
+  enmr.eu: "urn:mace:egi.eu:group:enmr.eu:role=vm_operator#aai.egi.eu"
+  eosc-synergy.eu: "urn:mace:egi.eu:group:eosc-synergy.eu:role=vm_operator#aai.egi.eu"
   fedcloud.egi.eu: "urn:mace:egi.eu:group:fedcloud.egi.eu:vm_operator:role=member#aai.egi.eu"
-  fusion: "urn:mace:egi.eu:group:fusion:vm_operator:role=member#aai.egi.eu"
-  gosafe.eng.it: "urn:mace:egi.eu:group:gosafe.eng.it:vm_operator:role=member#aai.egi.eu"
-  hisea.c-scale.eu: "urn:mace:egi.eu:group:hisea.c-scale.eu:role=member#aai.egi.eu "
+  fusion: "urn:mace:egi.eu:group:fusion:role=vm_operator#aai.egi.eu"
   icecube: "urn:mace:egi.eu:group:icecube:role=vm_operator#aai.egi.eu"
-  kampal.eosc-hub.eu: "urn:mace:egi.eu:group:kampal.eosc-hub.eu:vm_operator:role=member#aai.egi.eu"
-  lagoproject.net: "urn:mace:egi.eu:group:lagoproject.net:vm_operator:role=member#aai.egi.eu"
-  med.semmelweis-univ.hu: "urn:mace:egi.eu:group:med.semmelweis-univ.hu:vm_operator:role=member#aai.egi.eu"
-  minka-sdg.org: "urn:mace:egi.eu:group:minka-sdg.org:vm_operator:role=member#aai.egi.eu"
-  mswss.ui.savba.sk: "urn:mace:egi.eu:group:mswss.ui.savba.sk:vm_operator:role=member#aai.egi.eu"
-  mteam.data.kit.edu: "urn:mace:egi.eu:group:mteam.data.kit.edu:vm_operator:role=member#aai.egi.eu"
-  o3as.data.kit.edu: "urn:mace:egi.eu:group:o3as.data.kit.edu:vm_operator:role=member#aai.egi.eu"
-  opencoast.eosc-hub.eu: "urn:mace:egi.eu:group:opencoast.eosc-hub.eu:vm_operator:role=member#aai.egi.eu"
-  openrisknet.org: "urn:mace:egi.eu:group:openrisknet.org:vm_operator:role=member#aai.egi.eu"
-  ops: "urn:mace:egi.eu:group:ops:vm_operator:role=member#aai.egi.eu"
-  peachnote.com: "urn:mace:egi.eu:group:peachnote.com:vm_operator:role=member#aai.egi.eu"
-  saps-vo.i3m.upv.es: "urn:mace:egi.eu:group:saps-vo.i3m.upv.es:vm_operator:role=member#aai.egi.eu"
-  training.egi.eu: "urn:mace:egi.eu:group:training.egi.eu:vm_operator:role=member#aai.egi.eu"
-  umsa.cerit-sc.cz: "urn:mace:egi.eu:group:umsa.cerit-sc.cz:vm_operator:role=member#aai.egi.eu"
-  university.eosc-synergy.eu: "urn:mace:egi.eu:group:university.eosc-synergy.eu:vm_operator:role=member#aai.egi.eu"
-  vo.access.egi.eu: "urn:mace:egi.eu:group:vo.access.egi.eu:vm_operator:role=member#aai.egi.eu"
-  vo.agiliacenter.com: "urn:mace:egi.eu:group:vo.agiliacenter.com:vm_operator:role=member#aai.egi.eu"
+  lagoproject.net: "urn:mace:egi.eu:group:lagoproject.net:role=member#aai.egi.eu"
+  kampal.eosc-hub.eu: "urn:mace:egi.eu:group:kampal.eosc-hub.eu:role=vm_operator#aai.egi.eu"
+  med.semmelweis-univ.hu: "urn:mace:egi.eu:group:med.semmelweis-univ.hu:role=vm_operator#aai.egi.eu"
+  minka-sdg.org: "urn:mace:egi.eu:group:minka-sdg.org:role=vm_operator#aai.egi.eu"
+  mswss.ui.savba.sk: "urn:mace:egi.eu:group:mswss.ui.savba.sk:role=vm_operator#aai.egi.eu"
+  mteam.data.kit.edu: "urn:mace:egi.eu:group:mteam.data.kit.edu:role=vm_operator#aai.egi.eu"
+  o3as.data.kit.edu: "urn:mace:egi.eu:group:o3as.data.kit.edu:role=vm_operator#aai.egi.eu"
+  opencoast.eosc-hub.eu: "urn:mace:egi.eu:group:opencoast.eosc-hub.eu:role=vm_operator#aai.egi.eu"
+  openrisknet.org: "urn:mace:egi.eu:group:openrisknet.org:role=vm_operator#aai.egi.eu"
+  ops: "urn:mace:egi.eu:group:ops:role=vm_operator#aai.egi.eu"
+  peachnote.com: "urn:mace:egi.eu:group:peachnote.com:role=vm_operator#aai.egi.eu"
+  saps-vo.i3m.upv.es: "urn:mace:egi.eu:group:saps-vo.i3m.upv.es:role=vm_operator#aai.egi.eu"
+  training.egi.eu: "urn:mace:egi.eu:group:training.egi.eu:role=vm_operator#aai.egi.eu"
+  umsa.cerit-sc.cz: "urn:mace:egi.eu:group:umsa.cerit-sc.cz:role=vm_operator#aai.egi.eu"
+  university.eosc-synergy.eu: "urn:mace:egi.eu:group:university.eosc-synergy.eu:role=vm_operator#aai.egi.eu"
+  vo.access.egi.eu: "urn:mace:egi.eu:group:vo.access.egi.eu:role=vm_operator#aai.egi.eu"
+  vo.agiliacenter.com: "urn:mace:egi.eu:group:vo.agiliacenter.com:role=vm_operator#aai.egi.eu"
   vo.bd4nrg.eu: "urn:mace:egi.eu:group:vo.bd4nrg.eu:role=vm_operator#aai.egi.eu"
   vo.carouseldancing.org: "urn:mace:egi.eu:group:vo.carouseldancing.org:role=vm_operator#aai.egi.eu"
-  vo.cite.gr: "urn:mace:egi.eu:group:vo.cite.gr:role=member#aai.egi.eu"
-  vo.clarin.eu: "urn:mace:egi.eu:group:vo.clarin.eu:vm_operator:role=member#aai.egi.eu"
-  vo.deltares.nl: "urn:mace:egi.eu:group:vo.deltares.nl:vm_operator:role=member#aai.egi.eu"
-  vo.elixir-europe.org: "urn:mace:egi.eu:group:vo.elixir-europe.org:vm_operator:role=member#aai.egi.eu"
-  vo.emphasisproject.eu: "urn:mace:egi.eu:group:vo.emphasisproject.eu:vm_operator:role=member#aai.egi.eu"
-  vo.emso-eric.eu: "urn:mace:egi.eu:group:vo.emso-eric.eu:vm_operator:role=member#aai.egi.eu"
-  vo.enes.org: "urn:mace:egi.eu:group:vo.enes.org:vm_operator:role=member#aai.egi.eu"
-  vo.envri-fair.eu: "urn:mace:egi.eu:group:vo.envri-fair.eu:vm_operator:role=member#aai.egi.eu"
-  vo.eurogeoss.eu: "urn:mace:egi.eu:group:vo.eurogeoss.eu:vm_operator:role=member#aai.egi.eu"
-  vo.europlanet-vespa.eu: "urn:mace:egi.eu:group:vo.europlanet-vespa.eu:vm_operator:role=member#aai.egi.eu"
-  vo.geoss.eu: "urn:mace:egi.eu:group:vo.geoss.eu:vm_operator:role=member#aai.egi.eu"
-  vo.indigo-datacloud.eu: "urn:mace:egi.eu:group:vo.indigo-datacloud.eu:vm_operator:role=member#aai.egi.eu"
-  vo.lifewatch.eu: "urn:mace:egi.eu:group:vo.lifewatch.eu:vm_operator:role=member#aai.egi.eu"
-  /vo.lifewatch.eu/openbiomap: "urn:mace:egi.eu:group:vo.lifewatch.eu:vm_operator:role=member#aai.egi.eu"
+  vo.cite.gr: "urn:mace:egi.eu:group:vo.cite.gr:role=vm_operator#aai.egi.eu"
+  vo.clarin.eu: "urn:mace:egi.eu:group:vo.clarin.eu:role=vm_operator#aai.egi.eu"
+  vo.deltares.nl: "urn:mace:egi.eu:group:vo.deltares.nl:role=vm_operator#aai.egi.eu"
+  vo.elixir-europe.org: "urn:mace:egi.eu:group:vo.elixir-europe.org:role=vm_operator#aai.egi.eu"
+  vo.digitbrain.eu: "urn:mace:egi.eu:group:vo.digitbrain.eu:role=vm_operator#aai.egi.eu"
+  vo.emphasisproject.eu: "urn:mace:egi.eu:group:vo.emphasisproject.eu:role=vm_operator#aai.egi.eu"
+  vo.emso-eric.eu: "urn:mace:egi.eu:group:vo.emso-eric.eu:role=vm_operator#aai.egi.eu"
+  vo.enes.org: "urn:mace:egi.eu:group:vo.enes.org:role=vm_operator#aai.egi.eu"
+  vo.envri-fair.eu: "urn:mace:egi.eu:group:vo.envri-fair.eu:role=vm_operator#aai.egi.eu"
+  vo.environmental.egi.eu: "urn:mace:egi.eu:group:vo.environmental.egi.eu:role=vm_operator#aai.egi.eu"
+  vo.eurogeoss.eu: "urn:mace:egi.eu:group:vo.eurogeoss.eu:role=vm_operator#aai.egi.eu"
+  vo.europlanet-vespa.eu: "urn:mace:egi.eu:group:vo.europlanet-vespa.eu:role=vm_operator#aai.egi.eu"
+  vo.geoss.eu: "urn:mace:egi.eu:group:vo.geoss.eu:role=vm_operator#aai.egi.eu"
+  vo.indigo-datacloud.eu: "urn:mace:egi.eu:group:vo.indigo-datacloud.eu:role=vm_operator#aai.egi.eu"
+  vo.lifewatch.eu: "urn:mace:egi.eu:group:vo.lifewatch.eu:role=vm_operator#aai.egi.eu"
+  /vo.lifewatch.eu/openbiomap: "urn:mace:egi.eu:group:vo.lifewatch.eu:role=vm_operator#aai.egi.eu"
   vo.matrycs.eu: "urn:mace:egi.eu:group:vo.matrycs.eu:role=vm_operator#aai.egi.eu"
-  vo.max-centre.eu: "urn:mace:egi.eu:group:vo.max-centre.eu:vm_operator:role=member#aai.egi.eu"
+  vo.max-centre.eu: "urn:mace:egi.eu:group:vo.max-centre.eu:role=vm_operator#aai.egi.eu"
   vo.mightee.idia.za: "urn:mace:egi.eu:group:vo.mightee.idia.za:role=vm_operator#aai.egi.eu"
-  vo.nbis.se: "urn:mace:egi.eu:group:vo.nbis.se:vm_operator:role=member#aai.egi.eu"
-  vo.neanias.eu: "urn:mace:egi.eu:group:vo.neanias.eu:vm_operator:role=member#aai.egi.eu"
-  vo.nextgeoss.eu: "urn:mace:egi.eu:group:vo.nextgeoss.eu:vm_operator:role=member#aai.egi.eu"
-  vo.notebooks.egi.eu: "rn:mace:egi.eu:group:vo.notebooks.egi.eu:role=admin#aai.egi.eu"
-  vo.obsea.es: "urn:mace:egi.eu:group:vo.obsea.es:vm_operator:role=member#aai.egi.eu"
-  vo.openbiomap.lifewatch.eu: "urn:mace:egi.eu:group:vo.openbiomap.lifewatch.eu:vm_operator:role=member#aai.egi.eu"
+  vo.nbis.se: "urn:mace:egi.eu:group:vo.nbis.se:role=vm_operator#aai.egi.eu"
+  vo.neanias.eu: "urn:mace:egi.eu:group:vo.neanias.eu:role=vm_operator#aai.egi.eu"
+  vo.nextgeoss.eu: "urn:mace:egi.eu:group:vo.nextgeoss.eu:role=vm_operator#aai.egi.eu"
+  vo.notebooks.egi.eu: "urn:mace:egi.eu:group:vo.notebooks.egi.eu:role=admin#aai.egi.eu"
+  vo.obsea.es: "urn:mace:egi.eu:group:vo.obsea.es:role=vm_operator#aai.egi.eu"
   vo.openrdm.eu: "urn:mace:egi.eu:group:vo.openrdm.eu:role=vm_operator#aai.egi.eu"
-  vo.operas-eu.org: "urn:mace:egi.eu:group:vo.operas-eu.org:vm_operator:role=member#aai.egi.eu"
+  vo.operas-eu.org: "urn:mace:egi.eu:group:vo.operas-eu.org:role=vm_operator#aai.egi.eu"
   vo.pangeo.eu: "urn:mace:egi.eu:group:vo.pangeo.eu:role=vm_operator#aai.egi.eu"
   vo.panosc.eu: "urn:mace:egi.eu:group:vo.panosc.eu:role=vm_operator#aai.egi.eu"
-  vo.plocan.eu: "urn:mace:egi.eu:group:vo.plocan.eu:vm_operator:role=member#aai.egi.eu"
-  vo.policycloud.eu: "urn:mace:egi.eu:group:vo.policycloud.eu:vm_operator:role=member#aai.egi.eu"
-  vo.seadatanet.eu: "urn:mace:egi.eu:group:vo.seadatanet.eu:vm_operator:role=member#aai.egi.eu"
-  vo.stars4all.eu: "urn:mace:egi.eu:group:vo.stars4all.eu:vm_operator:role=member#aai.egi.eu"
-  waterwatch.c-scale.eu: "urn:mace:egi.eu:group:waterwatch.c-scale.eu:members:role=member#aai.egi.eu"
-  worsica.vo.incd.pt: "urn:mace:egi.eu:group:worsica.vo.incd.pt:vm_operator:role=member#aai.egi.eu"
+  vo.phiri.eu: "urn:mace:egi.eu:group:vo.phiri.eu:role=vm_operator#aai.egi.eu"
+  vo.plocan.eu: "urn:mace:egi.eu:group:vo.plocan.eu:role=vm_operator#aai.egi.eu"
+  vo.policycloud.eu: "urn:mace:egi.eu:group:vo.policycloud.eu:role=vm_operator#aai.egi.eu"
+  vo.seadatanet.org: "urn:mace:egi.eu:group:vo.seadatanet.org:role=vm_operator#aai.egi.eu"
+  vo.stars4all.eu: "urn:mace:egi.eu:group:vo.stars4all.eu:role=vm_operator#aai.egi.eu"
+  vo.ubora-biomedical.org: "urn:mace:egi.eu:group:vo.ubora-biomedical.org:role=vm_operator#aai.egi.eu"
+  waterwatch.c-scale.eu: "urn:mace:egi.eu:group:waterwatch.c-scale.eu:role=member#aai.egi.eu"
+  worsica.vo.incd.pt: "urn:mace:egi.eu:group:worsica.vo.incd.pt:role=vm_operator#aai.egi.eu"
+  wp9-pilot2.eosc-hub.eu: "urn:mace:egi.eu:group:wp9-pilot2.eosc-hub.eu:role=vm_operator#aai.egi.eu"
