--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -12,6 +12,14 @@ jobs:
     name: Build and push images
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+        image:
+        - cloud-info
+        - caso
+        - cloudkeeper-os
+        - cloudkeeper-core
+
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -19,7 +27,7 @@ jobs:
         id: docker_meta
         uses: docker/metadata-action@v3
         with:
-          images: egifedcloud/ops-cloud-info
+          images: egifedcloud/ops-${{ matrix.image }}
           tags: |
             type=sha
       - name: Set up QEMU
@@ -38,5 +46,5 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.docker_meta.outputs.tags }}
           labels: ${{ steps.docker_meta.outputs.labels }}
-          context: cloud-info
-          file: cloud-info/Dockerfile
+          context: ${{ matrix.image }}
+          file: ${{ matrix.image }}/Dockerfile
