--- a/vo-mappings.yaml
+++ b/vo-mappings.yaml
@@ -49,6 +49,7 @@ vos:
   vo.clarin.eu: "urn:mace:egi.eu:group:vo.clarin.eu:role=vm_operator#aai.egi.eu"
   vo.deltares.nl: "urn:mace:egi.eu:group:vo.deltares.nl:role=vm_operator#aai.egi.eu"
   vo.elixir-europe.org: "urn:mace:egi.eu:group:vo.elixir-europe.org:role=vm_operator#aai.egi.eu"
+  vo.eoscfuture-sp.panosc.eu: "urn:mace:egi.eu:vo.eoscfuture-sp.panosc.eu:role=vm_operator#aai.egi.eu"
   vo.digitbrain.eu: "urn:mace:egi.eu:group:vo.digitbrain.eu:role=vm_operator#aai.egi.eu"
   vo.emphasisproject.eu: "urn:mace:egi.eu:group:vo.emphasisproject.eu:role=vm_operator#aai.egi.eu"
   vo.emso-eric.eu: "urn:mace:egi.eu:group:vo.emso-eric.eu:role=vm_operator#aai.egi.eu"
