--- a/sites/CESNET-MCC.yaml
+++ b/sites/CESNET-MCC.yaml
@@ -108,3 +108,6 @@ vos:
 - name: vo.eoscfuture-sp.panosc.eu
   auth:
     project_id: c91eeff7bf7845bc901b319512f2ebdb
+- name: vo.inactive-sarscov2.eu
+  auth:
+    project_id: 0df0a85cfe8e47d38ce9142858845800
