--- a/vo-mappings.yaml
+++ b/vo-mappings.yaml
@@ -61,6 +61,7 @@ vos:
   vo.geoss.eu: "urn:mace:egi.eu:group:vo.geoss.eu:role=vm_operator#aai.egi.eu"
   vo.inactive-sarscov2.eu: "urn:mace:egi.eu:group:vo.inactive-sarscov2.eu:role=vm_operator#aai.egi.eu"
   vo.indigo-datacloud.eu: "urn:mace:egi.eu:group:vo.indigo-datacloud.eu:role=vm_operator#aai.egi.eu"
+  vo.lethe-project.eu: "urn:mace:egi.eu:group:vo.lethe-project.eu:role=vm_operator#aai.egi.eu"
   vo.lifewatch.eu: "urn:mace:egi.eu:group:vo.lifewatch.eu:role=vm_operator#aai.egi.eu"
   /vo.lifewatch.eu/openbiomap: "urn:mace:egi.eu:group:vo.lifewatch.eu:role=vm_operator#aai.egi.eu"
   vo.matrycs.eu: "urn:mace:egi.eu:group:vo.matrycs.eu:role=vm_operator#aai.egi.eu"
