--- a/sites/INFN-CLOUD-CNAF.yaml
+++ b/sites/INFN-CLOUD-CNAF.yaml
@@ -12,3 +12,6 @@ vos:
 - name: ops
   auth:
     project_id: 8b6a8afe225344dea808ec17a26de56d
+ - name: i-nergy.eu
+  auth:
+    project_id: ce2be245c0a24b52a0d31ede99c0bd63
