--- a/vo-mappings.yaml
+++ b/vo-mappings.yaml
@@ -79,6 +79,7 @@ vos:
   vo.phiri.eu: "urn:mace:egi.eu:group:vo.phiri.eu:role=vm_operator#aai.egi.eu"
   vo.plocan.eu: "urn:mace:egi.eu:group:vo.plocan.eu:role=vm_operator#aai.egi.eu"
   vo.policycloud.eu: "urn:mace:egi.eu:group:vo.policycloud.eu:role=vm_operator#aai.egi.eu"
+  vo.projectescape.eu: "urn:mace:egi.eu:group:vo.projectescape.eu:role=vm_operator#aai.egi.eu"
   vo.seadatanet.org: "urn:mace:egi.eu:group:vo.seadatanet.org:role=vm_operator#aai.egi.eu"
   vo.stars4all.eu: "urn:mace:egi.eu:group:vo.stars4all.eu:role=vm_operator#aai.egi.eu"
   vo.ubora-biomedical.org: "urn:mace:egi.eu:group:vo.ubora-biomedical.org:role=vm_operator#aai.egi.eu"
