Add seadatanet to BARI

--- a/sites/INFN-CLOUD-BARI.yaml
+++ b/sites/INFN-CLOUD-BARI.yaml
@@ -27,3 +27,6 @@ vos:
 - name: vo.policycloud.eu
   auth:
     project_id: a5d5df1f012c4070a81f8ce1ac8fe05e
+- name: vo.seadatanet.org
+  auth:
+    project_id: 50c9ea335b7d429296eb1623a97ff311
