--- a/deploy/vos.yaml
+++ b/deploy/vos.yaml
@@ -1,5 +1,8 @@
 ---
 vos:
+  #
+  # Co-manage service account
+  #
   EOServices-vo.indra.es:
     auth: "{{ fedcloud_sa }}"
     expiry: 2023-04-18 00:00:00
@@ -12,6 +15,9 @@ vos:
   cloud.egi.eu:
     auth: "{{ fedcloud_sa }}"
     expiry: 2022-10-19 00:00:00
+  cos4cloud-eosc.eu:
+    auth: "{{ fedcloud_sa }}"
+    expiry: 2023-05-09 00:00:00
   covid19.eosc-synergy.eu:
     auth: "{{ fedcloud_sa }}"
     expiry: 2022-09-29 00:00:00
@@ -51,6 +57,9 @@ vos:
   o3as.data.kit.edu:
     auth: "{{ fedcloud_sa }}"
     expiry: 2022-10-07 00:00:00
+  openrisknet.org:
+    auth: "{{ fedcloud_sa }}"
+    expiry: 2023-05-09 00:00:00
   peachnote.com:
     auth: "{{ fedcloud_sa }}"
     expiry: 2022-09-29 00:00:00
@@ -78,6 +87,9 @@ vos:
   vo.cite.gr:
     auth: "{{ fedcloud_sa }}"
     expiry: 2023-03-04 00:00:00
+  vo.deltares.nl:
+    auth: "{{ fedcloud_sa }}"
+    expiry: 2023-05-09 00:00:00
   vo.digitbrain.eu:
     auth: "{{ fedcloud_sa }}"
     expiry: 2022-10-01 00:00:00
@@ -122,13 +134,19 @@ vos:
     expiry: 2022-09-30 00:00:00
   vo.notebooks.egi.eu:
     auth: "{{ fedcloud_sa }}"
-    expiry: na
+    expiry: never
   vo.obsea.es:
     auth: "{{ fedcloud_sa }}"
     expiry: 2022-10-01 00:00:00
+  vo.openrdm.eu:
+    auth: "{{ fedcloud_sa }}"
+    expiry: 2023-03-21 00:00:00
   vo.operas-eu.org:
     auth: "{{ fedcloud_sa }}"
     expiry: 2022-06-25 00:00:00
+  vo.pangeo.eu:
+    auth: "{{ fedcloud_sa }}"
+    expiry: 2023-04-27 00:00:00
   vo.panosc.eu:
     auth: "{{ fedcloud_sa }}"
     expiry: 2022-09-30 00:00:00
@@ -159,13 +177,36 @@ vos:
   wp9-pilot2.eosc-hub.eu:
     auth: "{{ fedcloud_sa }}"
     expiry: 2022-10-01 00:00:00
+  #
+  # Perun based
+  #
+  aquamonitor.c-scale.eu:
+    auth: "{{ fedcloud_sa }}"
+    expiry: 2024-01-08 00:00:00
+  demo.fedcloud.egi.eu:
+    auth: "{{ fedcloud_sa }}"
+    expiry: never
+  fedcloud.egi.eu:
+    auth: "{{ fedcloud_sa }}"
+    expiry: never
+  hisea.c-scale.eu:
+    auth: "{{ fedcloud_sa }}"
+    expiry: 2024-01-09 00:00:00
+  waterwatch.c-scale.eu:
+    auth: "{{ fedcloud_sa }}"
+    expiry: 2024-04-23 00:00:00
+  #
   # certificate based VOs
+  #
   biomed:
     auth: "{{ robot_sa }}"
     expiry: 2023-01-09 00:00:00
   dteam:
     auth: "{{ robot_sa }}"
     expiry: 2022-07-27 00:00:00
+  eiscat.se:
+    auth: "{{ robot_sa }}"
+    expiry: never
   enmr.eu:
     auth: "{{ robot_sa }}"
     expiry: 2023-01-08 00:00:00
@@ -175,34 +216,36 @@ vos:
   ops:
     auth: "{{ robot_sa }}"
     expiry: 2022-12-26 00:00:00
+
+  # Eduteams based
+  vo.eoscfuture-sp.panosc.eu:
+    auth: "{{ fedcloud_sa }}"
+    expiry: never
+  # FIXME: these 2 need to be added to the Check-in configuration
+  vo.europlanet-vespa.eu:
+    auth: "{{ fedcloud_sa }}"
+    expiry: never
+  lagoproject.net:
+    auth: "{{ fedcloud_sa }}"
+    expiry: never
+
+  #
   # Missing membership
-  belle:
-  bioisi:
-  /biomed/vip:
-  /vo.lifewatch.eu/openbiomap:
-  aquamonitor.c-scale.eu:
-  blazarmonitoring.asi.it:
+  #
   chipster.csc.fi:
   cms:
-  cos4cloud-eosc.eu:
-  demo.fedcloud.egi.eu:
+  belle:
+  bioisi:
   drihm.eu:
-  eiscat.se:
-  fedcloud.egi.eu:
-  lagoproject.net:
   opencoast.eosc-hub.eu:
-  openrisknet.org:
-  university.eosc-synergy.eu:
   vo.clarin.eu:
-  vo.deltares.nl:
-  vo.elixir-europe.org:
   vo.envri-fair.eu:
-  vo.eoscfuture-sp.panosc.eu:
-  vo.europlanet-vespa.eu:
-  vo.inactive-sarscov2.eu:
   vo.indigo-datacloud.eu:
   vo.lifewatch.eu:
+  vo.inactive-sarscov2.eu:
   vo.nbis.se:
-  vo.openrdm.eu:
-  vo.pangeo.eu:
-  waterwatch.c-scale.eu:
+  university.eosc-synergy.eu:
+  # unclear
+  vo.elixir-europe.org:
+  # VOMS but down
+  blazarmonitoring.asi.it:
