--- a/sites/IN2P3-IRES.yaml
+++ b/sites/IN2P3-IRES.yaml
@@ -50,3 +50,6 @@ vos:
 - name: vo.lethe-project.eu
   auth:
     project_id: f064d2b5f42a4704958f3bfbff7404bd
+- name: saps-vo.i3m.upv.es
+  auth:
+    project_id: 96709738ce5a4439a0e14a77db9d3882
