--- a/vo-mappings.yaml
+++ b/vo-mappings.yaml
@@ -47,6 +47,7 @@ vos:
   vo.carouseldancing.org: "urn:mace:egi.eu:group:vo.carouseldancing.org:role=vm_operator#aai.egi.eu"
   vo.cite.gr: "urn:mace:egi.eu:group:vo.cite.gr:role=vm_operator#aai.egi.eu"
   vo.clarin.eu: "urn:mace:egi.eu:group:vo.clarin.eu:role=vm_operator#aai.egi.eu"
+  vo.decido-project.eu: "urn:mace:egi.eu:group:vo.decido-project.eu:role=vm_operator#aai.egi.eu"
   vo.deltares.nl: "urn:mace:egi.eu:group:vo.deltares.nl:role=vm_operator#aai.egi.eu"
   vo.elixir-europe.org: "urn:mace:egi.eu:group:vo.elixir-europe.org:role=vm_operator#aai.egi.eu"
   vo.eoscfuture-sp.panosc.eu: "urn:mace:egi.eu:vo.eoscfuture-sp.panosc.eu:role=vm_operator#aai.egi.eu"
