--- a/sites/DESY-CC.yaml
+++ b/sites/DESY-CC.yaml
@@ -14,3 +14,6 @@ vos:
 - name: vo.openrdm.eu
   auth:
     project_id: 270eaf591c4b489a8f6dc1400fe2ed3c
+- name: peachnote.com
+  auth:
+    project_id: 27f37f6027eb490f9d4994b57e08054e
