--- a/vo-mappings.yaml
+++ b/vo-mappings.yaml
@@ -57,6 +57,7 @@ vos:
   vo.enes.org: "urn:mace:egi.eu:group:vo.enes.org:role=vm_operator#aai.egi.eu"
   vo.envri-fair.eu: "urn:mace:egi.eu:group:vo.envri-fair.eu:role=vm_operator#aai.egi.eu"
   vo.environmental.egi.eu: "urn:mace:egi.eu:group:vo.environmental.egi.eu:role=vm_operator#aai.egi.eu"
+  vo.eu-openscreen.eu: "urn:mace:egi.eu:group:vo.eu-openscreen.eu:role=vm_operator#aai.egi.eu"
   vo.eurogeoss.eu: "urn:mace:egi.eu:group:vo.eurogeoss.eu:role=vm_operator#aai.egi.eu"
   vo.europlanet-vespa.eu: "urn:mace:egi.eu:group:vo.europlanet-vespa.eu:role=vm_operator#aai.egi.eu"
   vo.geoss.eu: "urn:mace:egi.eu:group:vo.geoss.eu:role=vm_operator#aai.egi.eu"
@@ -83,6 +84,7 @@ vos:
   vo.policycloud.eu: "urn:mace:egi.eu:group:vo.policycloud.eu:role=vm_operator#aai.egi.eu"
   vo.projectescape.eu: "urn:mace:egi.eu:group:vo.projectescape.eu:role=vm_operator#aai.egi.eu"
   vo.seadatanet.org: "urn:mace:egi.eu:group:vo.seadatanet.org:role=vm_operator#aai.egi.eu"
+  vo.sphinxsys.org: "urn:mace:egi.eu:group:vo.sphinxsys.org:role=vm_operator#aai.egi.eu"
   vo.stars4all.eu: "urn:mace:egi.eu:group:vo.stars4all.eu:role=vm_operator#aai.egi.eu"
   vo.ubora-biomedical.org: "urn:mace:egi.eu:group:vo.ubora-biomedical.org:role=vm_operator#aai.egi.eu"
   waterwatch.c-scale.eu: "urn:mace:egi.eu:group:waterwatch.c-scale.eu:role=member#aai.egi.eu"
