--- a/vo-mappings.yaml
+++ b/vo-mappings.yaml
@@ -91,3 +91,4 @@ vos:
   waterwatch.c-scale.eu: "urn:mace:egi.eu:group:waterwatch.c-scale.eu:role=member#aai.egi.eu"
   worsica.vo.incd.pt: "urn:mace:egi.eu:group:worsica.vo.incd.pt:role=vm_operator#aai.egi.eu"
   wp9-pilot2.eosc-hub.eu: "urn:mace:egi.eu:group:wp9-pilot2.eosc-hub.eu:role=vm_operator#aai.egi.eu"
+  ispravision.vo.egi.eu: "urn:mace:egi.eu:group:ispravision.vo.egi.eu:role=vm_operator#aai.egi.eu"
