--- a/sites/CESGA-CLOUD.yaml
+++ b/sites/CESGA-CLOUD.yaml
@@ -8,3 +8,6 @@ vos:
 - name: cesga
   auth:
     project_id: 8656c10a8df8404f8fd78a2d470e1f1b
+- name: cesga.es
+  auth:
+    project_id: 62ff7bb99bf943fd861fb85d019eba40
