--- a/vo-mappings.yaml
+++ b/vo-mappings.yaml
@@ -9,6 +9,7 @@ vos:
   /biomed/vip: "urn:mace:egi.eu:group:biomed:role=vm_operator#aai.egi.eu"
   blazarmonitoring.asi.it: "urn:mace:egi.eu:group:blazarmonitoring.asi.it:role=vm_operator#aai.egi.eu"
   cesga: "urn:mace:egi.eu:group:cesga:role=vm_operator#aai.egi.eu"
+  cesga.es: "urn:mace:egi.eu:group:cesga.es:role=vm_operator#aai.egi.eu"
   chipster.csc.fi: "urn:mace:egi.eu:group:chipster.csc.fi:role=vm_operator#aai.egi.eu"
   cloud.egi.eu: "urn:mace:egi.eu:group:cloud.egi.eu:role=vm_operator#aai.egi.eu"
   cms: "urn:mace:egi.eu:group:cms:role=vm_operator#aai.egi.eu"
