--- a/sites/CESGA-CLOUD.yaml
+++ b/sites/CESGA-CLOUD.yaml
@@ -1,13 +1,10 @@
 ---
 gocdb: CESGA-CLOUD
-endpoint: https://cloud-pps.srv.cesga.es:5000/v3
+endpoint: https://cloud.srv.cesga.es:5000/v3
 vos:
 - name: ops
   auth:
-    project_id: b6c3ac04ac524340a12008fd681f0f81
-- name: cesga
-  auth:
-    project_id: 8656c10a8df8404f8fd78a2d470e1f1b
+    project_id: e92677d7fc0742a7b1e3a33285e2296c
 - name: cesga.es
   auth:
-    project_id: 62ff7bb99bf943fd861fb85d019eba40
+    project_id: 7274a80de0954f0f88a594f94642b1fb
