--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,8 @@ jobs:
       uses: actions/checkout@v3
     - name: Setup python
       uses: actions/setup-python@v4
+      with:
+        python-version: 3.x
     - name: Install environment
       run: |
         curl -L https://github.com/stedolan/jq/releases/download/jq-1.6/jq-linux64 > jq
