--- a/.github/workflows/validate.yaml
+++ b/.github/workflows/validate.yaml
@@ -20,6 +20,8 @@ jobs:
           ./yajsv -s schema.json sites/*.yaml
       - name: Setup python
         uses: actions/setup-python@v4
+        with:
+          python-version: 3.x
       - name: Install requirements
         run: pip install -r requirements.txt
       - name: Validate GOC and VOs
