--- a/vo-mappings.yaml
+++ b/vo-mappings.yaml
@@ -26,6 +26,7 @@ vos:
   enmr.eu: "urn:mace:egi.eu:group:enmr.eu:role=vm_operator#aai.egi.eu"
   eosc-synergy.eu: "urn:mace:egi.eu:group:eosc-synergy.eu:role=vm_operator#aai.egi.eu"
   fedcloud.egi.eu: "urn:mace:egi.eu:group:fedcloud.egi.eu:vm_operator:role=member#aai.egi.eu"
+  fermi-lat.infn.it: "urn:mace:egi.eu:group:fermi-lat.infn.it:role=vm_operator#aai.egi.eu"
   fusion: "urn:mace:egi.eu:group:fusion:role=vm_operator#aai.egi.eu"
   icecube: "urn:mace:egi.eu:group:icecube:role=vm_operator#aai.egi.eu"
   lagoproject.net: "urn:mace:egi.eu:group:lagoproject.net:role=member#aai.egi.eu"
@@ -62,7 +63,6 @@ vos:
   vo.eu-openscreen.eu: "urn:mace:egi.eu:group:vo.eu-openscreen.eu:role=vm_operator#aai.egi.eu"
   vo.eurogeoss.eu: "urn:mace:egi.eu:group:vo.eurogeoss.eu:role=vm_operator#aai.egi.eu"
   vo.europlanet-vespa.eu: "urn:mace:egi.eu:group:vo.europlanet-vespa.eu:role=vm_operator#aai.egi.eu"
-  vo fermi-lat.infn.it: "urn:mace:egi.eu:group:vo.fermi-lat.infn.it:role=vm_operator#aai.egi.eu"
   vo.geoss.eu: "urn:mace:egi.eu:group:vo.geoss.eu:role=vm_operator#aai.egi.eu"
   vo.i-nergy.eu: "urn:mace:egi.eu:group:vo.i-nergy.eu:role=vm_operator#aai.egi.eu"
   vo.inactive-sarscov2.eu: "urn:mace:egi.eu:group:vo.inactive-sarscov2.eu:role=vm_operator#aai.egi.eu"
