--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -87,7 +87,7 @@ jobs:
         sed -i -e "s/%ANSIBLE_SECRETS%/$ANSIBLE_ENCODED_SECRETS/" cloud-init.yaml
         echo "$ANSIBLE_SECRETS_KEYCLOAK" > secrets.yaml
         echo "checkin_token_endpoint: https://aai.egi.eu/auth/realms/egi/protocol/openid-connect/token" >> secrets.yaml
-        ANSIBLE_ENCODED_SECRETS_KEYCLOAK="$(cat secrets.yaml | base64 -w 0)"
+        ANSIBLE_ENCODED_SECRETS_KEYCLOAK="$(base64 -w 0 < secrets.yaml)"
         echo "::add-mask::$ANSIBLE_ENCODED_SECRETS_KEYCLOAK"
         sed -i -e "s/%ANSIBLE_SECRETS%/$ANSIBLE_ENCODED_SECRETS_KEYCLOAK/" cloud-init-keycloak.yaml
     - name: terraform plan
