--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,9 +32,11 @@ jobs:
     - name: Configure providers access
       env:
         MYTOKEN: ${{ secrets.MYTOKEN }}
+        REFRESH_TOKEN: ${{ secrets.REFRESH_TOKEN }}
       run: |
-        PATH="$PWD:$PATH"
-        OIDC_TOKEN=$(mytoken AT --MT-env MYTOKEN)
+        OIDC_TOKEN=$(curl -X POST "https://aai.egi.eu/oidc/token" \
+                          -d "grant_type=refresh_token&refresh_token=$REFRESH_TOKEN&client_id=token-portal&scope=openid%20email%20profile%20voperson_id%20eduperson_entitlement" \
+                        | jq -r ".access_token")
         echo "::add-mask::$OIDC_TOKEN"
         cd deploy
         BACKEND_SITE="$(yq -r .clouds.backend.site clouds.yaml)"
