--- a/deploy/vos.yaml
+++ b/deploy/vos.yaml
@@ -79,6 +79,8 @@ vos:
     auth: "{{ fedcloud_sa }}"
   vo.eurogeoss.eu:
     auth: "{{ fedcloud_sa }}"
+  vo.fuvex.es:
+    auth: "{{ fedcloud_sa }}"
   vo.geoss.eu:
     auth: "{{ fedcloud_sa }}"
   vo.i-nergy.eu:
