--- a/vo-mappings.yaml
+++ b/vo-mappings.yaml
@@ -26,6 +26,7 @@ vos:
   enmr.eu: "urn:mace:egi.eu:group:enmr.eu:role=vm_operator#aai.egi.eu"
   eosc-synergy.eu: "urn:mace:egi.eu:group:eosc-synergy.eu:role=vm_operator#aai.egi.eu"
   fedcloud.egi.eu: "urn:mace:egi.eu:group:fedcloud.egi.eu:vm_operator:role=member#aai.egi.eu"
+  fermi-lat.infn.it: "urn:mace:egi.eu:group:fermi-lat.infn.it:role=vm_operator#aai.egi.eu"
   fusion: "urn:mace:egi.eu:group:fusion:role=vm_operator#aai.egi.eu"
   icecube: "urn:mace:egi.eu:group:icecube:role=vm_operator#aai.egi.eu"
   lagoproject.net: "urn:mace:egi.eu:group:lagoproject.net:role=member#aai.egi.eu"
@@ -52,7 +53,7 @@ vos:
   vo.decido-project.eu: "urn:mace:egi.eu:group:vo.decido-project.eu:role=vm_operator#aai.egi.eu"
   vo.deltares.nl: "urn:mace:egi.eu:group:vo.deltares.nl:role=vm_operator#aai.egi.eu"
   vo.elixir-europe.org: "urn:mace:egi.eu:group:vo.elixir-europe.org:role=vm_operator#aai.egi.eu"
-  vo.eoscfuture-sp.panosc.eu: "urn:mace:egi.eu:vo.eoscfuture-sp.panosc.eu:role=vm_operator#aai.egi.eu"
+  vo.eoscfuture-sp.panosc.eu: "urn:mace:egi.eu:group:vo.eoscfuture-sp.panosc.eu:role=vm_operator#aai.egi.eu"
   vo.digitbrain.eu: "urn:mace:egi.eu:group:vo.digitbrain.eu:role=vm_operator#aai.egi.eu"
   vo.emphasisproject.eu: "urn:mace:egi.eu:group:vo.emphasisproject.eu:role=vm_operator#aai.egi.eu"
   vo.emso-eric.eu: "urn:mace:egi.eu:group:vo.emso-eric.eu:role=vm_operator#aai.egi.eu"
@@ -62,6 +63,7 @@ vos:
   vo.eu-openscreen.eu: "urn:mace:egi.eu:group:vo.eu-openscreen.eu:role=vm_operator#aai.egi.eu"
   vo.eurogeoss.eu: "urn:mace:egi.eu:group:vo.eurogeoss.eu:role=vm_operator#aai.egi.eu"
   vo.europlanet-vespa.eu: "urn:mace:egi.eu:group:vo.europlanet-vespa.eu:role=vm_operator#aai.egi.eu"
+  vo.fuvex.es: "urn:mace:egi.eu:group:vo.fuvex.es:role=vm_operator#aai.egi.eu"
   vo.geoss.eu: "urn:mace:egi.eu:group:vo.geoss.eu:role=vm_operator#aai.egi.eu"
   vo.i-nergy.eu: "urn:mace:egi.eu:group:vo.i-nergy.eu:role=vm_operator#aai.egi.eu"
   vo.inactive-sarscov2.eu: "urn:mace:egi.eu:group:vo.inactive-sarscov2.eu:role=vm_operator#aai.egi.eu"
@@ -77,6 +79,7 @@ vos:
   vo.nextgeoss.eu: "urn:mace:egi.eu:group:vo.nextgeoss.eu:role=vm_operator#aai.egi.eu"
   vo.notebooks.egi.eu: "urn:mace:egi.eu:group:vo.notebooks.egi.eu:role=admin#aai.egi.eu"
   vo.obsea.es: "urn:mace:egi.eu:group:vo.obsea.es:role=vm_operator#aai.egi.eu"
+  vo.oipub.es: "urn:mace:egi.eu:group:vo.oipub.com:role=vm_operator#aai.egi.eu"
   vo.openrdm.eu: "urn:mace:egi.eu:group:vo.openrdm.eu:role=vm_operator#aai.egi.eu"
   vo.operas-eu.org: "urn:mace:egi.eu:group:vo.operas-eu.org:role=vm_operator#aai.egi.eu"
   vo.pangeo.eu: "urn:mace:egi.eu:group:vo.pangeo.eu:role=vm_operator#aai.egi.eu"
