--- a/deploy/vos.yaml
+++ b/deploy/vos.yaml
@@ -1,8 +1,6 @@
 ---
 vos:
-  #
   # Co-manage service account
-  #
   EOServices-vo.indra.es:
     auth: "{{ fedcloud_sa }}"
   benchmark.terradue.com:
@@ -24,6 +22,8 @@ vos:
   datafurn.eosc-hub.eu:
     auth: "{{ fedcloud_sa }}"
   eosc-synergy.eu:
+    auth: "{{ fedcloud_sa }}"
+  fermi-lat.infn.it:
     auth: "{{ fedcloud_sa }}"
   icecube:
     auth: "{{ fedcloud_sa }}"
@@ -79,9 +79,13 @@ vos:
     auth: "{{ fedcloud_sa }}"
   vo.eurogeoss.eu:
     auth: "{{ fedcloud_sa }}"
+  vo.fuvex.es:
+    auth: "{{ fedcloud_sa }}"
   vo.geoss.eu:
     auth: "{{ fedcloud_sa }}"
   vo.i-nergy.eu:
+    auth: "{{ fedcloud_sa }}"
+  vo.intelligg.com:
     auth: "{{ fedcloud_sa }}"
   vo.lethe-project.eu:
     auth: "{{ fedcloud_sa }}"
@@ -98,6 +102,8 @@ vos:
   vo.notebooks.egi.eu:
     auth: "{{ fedcloud_sa }}"
   vo.obsea.es:
+    auth: "{{ fedcloud_sa }}"
+  vo.oipub.com:
     auth: "{{ fedcloud_sa }}"
   vo.openrdm.eu:
     auth: "{{ fedcloud_sa }}"
@@ -129,20 +135,20 @@ vos:
     auth: "{{ fedcloud_sa }}"
   wp9-pilot2.eosc-hub.eu:
     auth: "{{ fedcloud_sa }}"
-  #
+
   # Perun based
-  #
   aquamonitor.c-scale.eu:
     auth: "{{ fedcloud_sa }}"
   demo.fedcloud.egi.eu:
     auth: "{{ fedcloud_sa }}"
   hisea.c-scale.eu:
     auth: "{{ fedcloud_sa }}"
+  vo.nbis.se:
+    auth: "{{ fedcloud_sa }}"
   waterwatch.c-scale.eu:
     auth: "{{ fedcloud_sa }}"
-  #
+
   # certificate based VOs
-  #
   biomed:
     auth: "{{ robot_sa }}"
   cesga:
@@ -163,15 +169,12 @@ vos:
   # Eduteams based
   vo.eoscfuture-sp.panosc.eu:
     auth: "{{ fedcloud_sa }}"
-  # FIXME: these 2 need to be added to the Check-in configuration
   vo.europlanet-vespa.eu:
     auth: "{{ fedcloud_sa }}"
   lagoproject.net:
     auth: "{{ fedcloud_sa }}"
 
-  #
   # Missing membership
-  #
   chipster.csc.fi:
   cms:
   belle:
@@ -183,7 +186,6 @@ vos:
   vo.indigo-datacloud.eu:
   vo.lifewatch.eu:
   vo.inactive-sarscov2.eu:
-  vo.nbis.se:
   university.eosc-synergy.eu:
   # unclear
   vo.elixir-europe.org:
