Add VO vo.projectescape.eu project_id

--- a/sites/INFN-CLOUD-CNAF.yaml
+++ b/sites/INFN-CLOUD-CNAF.yaml
@@ -18,3 +18,6 @@ vos:
 - name: vo.i-nergy.eu
   auth:
     project_id: ce2be245c0a24b52a0d31ede99c0bd63
+- name: vo.projectescape.eu
+  auth:
+    project_id: 1f3ff0902d554384a5af936e6643695f
