--- a/vo-mappings.yaml
+++ b/vo-mappings.yaml
@@ -79,7 +79,7 @@ vos:
   vo.nextgeoss.eu: "urn:mace:egi.eu:group:vo.nextgeoss.eu:role=vm_operator#aai.egi.eu"
   vo.notebooks.egi.eu: "urn:mace:egi.eu:group:vo.notebooks.egi.eu:role=admin#aai.egi.eu"
   vo.obsea.es: "urn:mace:egi.eu:group:vo.obsea.es:role=vm_operator#aai.egi.eu"
-  vo.oipub.es: "urn:mace:egi.eu:group:vo.oipub.com:role=vm_operator#aai.egi.eu"
+  vo.oipub.com: "urn:mace:egi.eu:group:vo.oipub.com:role=vm_operator#aai.egi.eu"
   vo.openrdm.eu: "urn:mace:egi.eu:group:vo.openrdm.eu:role=vm_operator#aai.egi.eu"
   vo.operas-eu.org: "urn:mace:egi.eu:group:vo.operas-eu.org:role=vm_operator#aai.egi.eu"
   vo.pangeo.eu: "urn:mace:egi.eu:group:vo.pangeo.eu:role=vm_operator#aai.egi.eu"
