--- a/vo-mappings.yaml
+++ b/vo-mappings.yaml
@@ -1,6 +1,7 @@
 vos:
   EOServices-vo.indra.es: "urn:mace:egi.eu:group:EOServices-vo.indra.es:role=vm_operator#aai.egi.eu"
   aquamonitor.c-scale.eu: "urn:mace:egi.eu:group:aquamonitor.c-scale.eu:role=member#aai.egi.eu"
+  hisea.c-scale.eu: "urn:mace:egi.eu:group:hisea.c-scale.eu:role=member#aai.egi.eu"
   belle: "urn:mace:egi.eu:group:belle:role=vm_operator#aai.egi.eu"
   benchmark.terradue.com: "urn:mace:egi.eu:group:benchmark.terradue.com:role=vm_operator#aai.egi.eu"
   biinsight.eosc-hub.eu: "urn:mace:egi.eu:group:biinsight.eosc-hub.eu:role=vm_operator#aai.egi.eu"
@@ -97,3 +98,4 @@ vos:
   worsica.vo.incd.pt: "urn:mace:egi.eu:group:worsica.vo.incd.pt:role=vm_operator#aai.egi.eu"
   wp9-pilot2.eosc-hub.eu: "urn:mace:egi.eu:group:wp9-pilot2.eosc-hub.eu:role=vm_operator#aai.egi.eu"
   ispravision.vo.egi.eu: "urn:mace:egi.eu:group:ispravision.vo.egi.eu:role=vm_operator#aai.egi.eu"
+  hisea.c-scale.eu: ""
